Updated About Us Page of website

--- a/server/pages/team/index.html
+++ b/server/pages/team/index.html
@@ -148,7 +148,7 @@
         >
           Dinoscape
         </h3>
-        <p style="font-family: system-ui; margin-top: -7.5px">
+        <p style="font-family: system-ui; margin-top: -7.5px; opacity: 0.75">
           Hi! I'm the core maintainer of Remote Control. Although I'm still just
           13 years old, I have spent a lot of time trying to build an awesome
           open source alternative to other conventional Remote Desktop solutions
@@ -159,6 +159,65 @@
       </div>
     </div>
 
-    <div id="naptha_container0932014_0707"></div>
+    <div style="display: flex; flex-direction: row; margin-left: 65px">
+      <img
+        src="/assets/defaultProfilePictureMan.webp"
+        style="width: 72.5px; height: 72.5px; border-radius: 50%"
+      />
+      <div
+        style="
+          display: flex;
+          flex-direction: column;
+          margin-top: -20px;
+          margin-left: 25px;
+        "
+      >
+        <h3
+          style="
+            font-size: 18px;
+            font-weight: 600;
+            font-family: system-ui;
+            opacity: 0.95;
+          "
+        >
+          THIS COULD BE YOU!
+        </h3>
+        <p style="font-family: system-ui; margin-top: -7.5px; opacity: 0.75">
+          Join our amazing team of entrepreneurs and start contributing to our
+          GitHub repository today!
+        </p>
+        <p></p>
+      </div>
+    </div>
+    <div style="display: flex; flex-direction: row; margin-left: 65px">
+      <img
+        style="width: 72.5px; height: 72.5px; border-radius: 50%"
+        src="/defaultProfilePictureWoman.webp"
+      />
+      <div
+        style="
+          display: flex;
+          flex-direction: column;
+          margin-top: -20px;
+          margin-left: 25px;
+        "
+      >
+        <h3
+          style="
+            font-size: 18px;
+            font-weight: 600;
+            font-family: system-ui;
+            opacity: 0.95;
+          "
+        >
+          THIS COULD BE YOUR FRIEND!
+        </h3>
+        <p style="font-family: system-ui; margin-top: -7.5px; opacity: 0.75">
+          Tell him to join our amazing team of entrepreneurs and start
+          contributing to our GitHub repository today!
+        </p>
+        <p></p>
+      </div>
+    </div>
   </body>
 </html>
