--- a/server/pages/home/index.html
+++ b/server/pages/home/index.html
@@ -23,7 +23,7 @@
       <a
         href="/"
         style="
-          color: #000018;
+          color: black;
           font-size: 16px;
           font-weight: 500;
           font-family: system-ui;
