--- a/server/pages/team/index.html
+++ b/server/pages/team/index.html
@@ -17,7 +17,7 @@
       <a
         href="/"
         style="
-          color: #000018;
+          color: #585c67;
           font-size: 16px;
           font-weight: 500;
           font-family: system-ui;
@@ -30,7 +30,7 @@
       <a
         href="/team"
         style="
-          color: #585c67;
+          color: black;
           font-size: 16px;
           font-weight: 500;
           font-family: system-ui;
