Added Open Source page to website; small changes

--- a/server/pages/home/index.html
+++ b/server/pages/home/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Remote Control - Home</title>
+    <script defer src="/pages/home/script.js"></script>
     <link rel="icon" href="/assets/favicon.ico" />
     <style>
       ul li,
@@ -45,7 +46,7 @@
         "
         >About us</a
       ><a
-        href="/changelog"
+        href="https://github.com/DinoscapeProgramming/Remote-Control/releases"
         style="
           color: #585c67;
           font-size: 16px;
@@ -180,7 +181,7 @@
       Join the community
     </h3>
     <a
-      href="https://github.com/DinoscapeProgramming/Remote-Control/releases/tag/v1.0.0"
+      href="https://github.com/DinoscapeProgramming/Remote-Control/discussions"
       style="
         color: black;
         text-decoration: none;
@@ -199,7 +200,7 @@
       "
       >GitHub Discussions</a
     ><a
-      href="https://github.com/DinoscapeProgramming/Remote-Control/releases/tag/v1.0.0"
+      href="https://discord.gg/xquQEp7xeq"
       style="
         color: black;
         text-decoration: none;
@@ -218,7 +219,7 @@
       "
       >Discord</a
     ><a
-      href="https://github.com/DinoscapeProgramming/Remote-Control/releases/tag/v1.0.0"
+      href="https://scratch.mit.edu/users/Dinoscape"
       style="
         color: black;
         text-decoration: none;
