--- a/server/pages/team/index.html
+++ b/server/pages/team/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Remote Control - About Us</title>
+    <script defer src="/pages/team/script.js"></script>
     <link rel="icon" href="/assets/favicon.ico" />
   </head>
   <body style="margin: 0;">
@@ -39,7 +40,7 @@
         "
         >About us</a
       ><a
-        href="/changelog"
+        href="https://github.com/DinoscapeProgramming/Remote-Control/releases"
         style="
           color: #585c67;
           font-size: 16px;
