--- a/server/pages/openSource/index.html
+++ b/server/pages/openSource/index.html
@@ -122,7 +122,7 @@
         font-weight: 400;
         font-family: system-ui;
         margin-top: -12.5px;
-        margin-bottom: 57.5px;
+        margin-bottom: 47.5px;
         margin-left: calc(65px + 8.75vw);
         opacity: 0.75;
         text-align: center;
@@ -132,5 +132,44 @@
       Collaborate with us to elevate RustDesk and make a positive impact on
       users globally.
     </h2>
+    <div style="position: absolute; left: 50%; transform: translateX(-50%)">
+      <a
+        href="https://github.com/DinoscapeProgramming/Remote-Control"
+        style="
+          color: #ffffff;
+          background-color: #024eff;
+          text-decoration: none;
+          font-size: 16px;
+          font-weight: 500;
+          font-family: system-ui;
+          margin-top: -11px;
+          border-radius: 9px;
+          padding-top: 11px;
+          padding-bottom: 13px;
+          padding-left: 18.5px;
+          padding-right: 19.5px;
+        "
+        >Star on GitHub</a
+      ><a
+        href="https://github.com/DinoscapeProgramming/Remote-Control/issues"
+        style="
+          color: black;
+          text-decoration: none;
+          font-size: 16px;
+          font-weight: 500;
+          font-family: system-ui;
+          margin-top: -11px;
+          margin-left: 11.25px;
+          border-radius: 9px;
+          padding-top: 11px;
+          padding-bottom: 13px;
+          padding-left: 18.5px;
+          padding-right: 19.5px;
+          border: 1px solid #bfbfbfb8;
+          opacity: 0.9;
+        "
+        >Find Open Issues</a
+      >
+    </div>
   </body>
 </html>
