--- a/server/pages/openSource/index.html
+++ b/server/pages/openSource/index.html
@@ -40,7 +40,7 @@
         "
         >About us</a
       ><a
-        href="/changelog"
+        href="https://github.com/DinoscapeProgramming/Remote-Control/releases"
         style="
           color: #585c67;
           font-size: 16px;
