Updated readme files

--- a/server/pages/help/markdown/markdown.html
+++ b/server/pages/help/markdown/markdown.html
@@ -163,6 +163,7 @@ If you're using Linux Bash for Windows, <a href="https://www.howtogeek.com/26157
 </a>
 <h2 id="you-may-also-like">You may also like... </h2>
 <ul>
+<li><a href="https://github.com/DinoscapeProgramming/Express-Docs">Express Docs</a> - An easy-to-use documentation site creator</li>
 <li><a href="https://github.com/DinoscapeProgramming/Youtube-Offline">Youtube Offline</a> - A lightweight YouTube video downloader</li>
 <li><a href="https://github.com/DinoscapeProgramming/Appify">Appify</a> - A tiny tool that allows you to turn your website into an app</li>
 <li><a href="https://github.com/DinoscapeProgramming/Meetings">Meetings</a> - A meetings app with lots of features</li>
