Added layout for remote print driver

--- a/client/pages/settings/index.html
+++ b/client/pages/settings/index.html
@@ -369,6 +369,56 @@
           opacity: 0.75;
         "
       ></div>
+      <div style="display: flex; flex-direction: row; margin-left: 42.5px">
+        <i class="fa fa-print" aria-hidden="true" style="
+            height: 100%;
+            font-size: 22px;
+            margin-top: 3.5px;
+            margin-right: 12.5px;
+          "></i>
+        <div style="display: flex; flex-direction: column">
+          <h4 style="
+              font-size: 15px;
+              font-weight: 600;
+              font-family: system-ui;
+              margin-top: 0;
+              margin-bottom: 0;
+            ">
+            Remote Print Driver
+          </h4>
+          <p style="
+              font-size: 13.25px;
+              font-family: system-ui;
+              margin-top: 0.25px;
+            ">
+            Install our remote print driver to enable remote printing
+          </p>
+        </div>
+        <button style="
+          height: 27.5px;
+          font-family: system-ui;
+          border: none;
+          border-radius: 7.5px;
+          background-color: #155de1;
+          color: white;
+          padding: 15px;
+          padding-top: 7.5px;
+          padding-bottom: 25px;
+          cursor: pointer;
+          position: relative;
+          left: calc(100vw - 457.5px);
+          margin-top: 5px;
+        ">Install</button>
+      </div>
+      <div style="
+          width: calc(100% - 50px);
+          height: 1px;
+          background-color: #bfbfbf78;
+          margin-top: 2.5px;
+          margin-bottom: 10.5px;
+          margin-left: 25px;
+          opacity: 0.75;
+        "></div>
     </div>
   </body>
 </html>
