--- a/client/pages/settings/index.html
+++ b/client/pages/settings/index.html
@@ -64,6 +64,12 @@
         -ms-transform: translateX(18.25px);
         transform: translateX(18.25px);
       }
+
+      .installRemotePrintDriverButton:disabled {
+        cursor: not-allowed !important;
+        background-color: #447ce7 !important;
+        opacity: 0.8;
+      }
     </style>
   </head>
   <body style="margin: 0;">
@@ -394,21 +400,26 @@
             Install our remote print driver to enable remote printing
           </p>
         </div>
-        <button style="
-          height: 27.5px;
-          font-family: system-ui;
-          border: none;
-          border-radius: 7.5px;
-          background-color: #155de1;
-          color: white;
-          padding: 15px;
-          padding-top: 7.5px;
-          padding-bottom: 25px;
-          cursor: pointer;
-          position: relative;
-          left: calc(100vw - 457.5px);
-          margin-top: 5px;
-        ">Install</button>
+        <button
+          id="installRemotePrintDriverButton"
+          class="installRemotePrintDriverButton"
+          style="
+            height: 27.5px;
+            font-family: system-ui;
+            border: none;
+            border-radius: 7.5px;
+            background-color: #155de1;
+            color: white;
+            padding: 15px;
+            padding-top: 7.5px;
+            padding-bottom: 25px;
+            cursor: pointer;
+            position: relative;
+            left: calc(100vw - 457.5px);
+            margin-top: 5px;
+          ">
+          Install
+        </button>
       </div>
       <div style="
           width: calc(100% - 50px);
