--- a/client/pages/settings/index.html
+++ b/client/pages/settings/index.html
@@ -414,8 +414,8 @@
             padding-top: 7.5px;
             padding-bottom: 25px;
             cursor: pointer;
-            position: relative;
-            left: calc(100vw - 457.5px);
+            position: absolute;
+            right: 25px;
             margin-top: 5px;
           ">
           Install
