Added todo list; Bug fixes; Design fix; Created execute script file; Mapped script commands using execute script file

--- a/client/pages/settings/index.html
+++ b/client/pages/settings/index.html
@@ -65,6 +65,10 @@
         transform: translateX(18.25px);
       }
 
+      .installRemotePrintDriverButton:hover {
+        background-color: #155ce1f2 !important;
+      }
+
       .installRemotePrintDriverButton:disabled {
         cursor: not-allowed !important;
         background-color: #447ce7 !important;
