--- a/server/pages/team/index.html
+++ b/server/pages/team/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Remote Control - About Us</title>
+    <script defer src="/postHog.js"></script>
     <script defer src="/pages/team/script.js"></script>
     <link rel="icon" href="/assets/favicon.ico" />
   </head>
