--- a/server/pages/openSource/index.html
+++ b/server/pages/openSource/index.html
@@ -4,22 +4,107 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Remote Control - Open Source</title>
-    <script defer src="/postHog.js"></script>
-    <script defer src="/pages/openSource/script.js"></script>
     <link rel="icon" href="/assets/favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&amp;family=Inter:wght@300;400;600&amp;display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      body {
+        margin: 0;
+        font-family: "Poppins", sans-serif;
+        background-color: #f7f8fa;
+        color: #333;
+      }
+
+      h1 {
+        font-size: 40px;
+        font-weight: 700;
+        color: black;
+        text-align: center;
+        margin: 50px 0 10px;
+      }
+
+      h2 {
+        font-size: 18px;
+        font-weight: 400;
+        color: #585c67;
+        text-align: center;
+        width: 70%;
+        margin: 0 auto 50px;
+        line-height: 1.5;
+      }
+
+      .ctaContainer {
+        display: flex;
+        justify-content: center;
+        gap: 20px;
+        margin-bottom: 50px;
+      }
+
+      .ctaContainer a {
+        display: inline-block;
+        font-size: 16px;
+        font-weight: 500;
+        padding: 12px 20px;
+        border-radius: 8px;
+        text-decoration: none;
+        transition: background-color 0.3s, opacity 0.3s;
+      }
+
+      .ctaContainer a.primary-btn {
+        background-color: #024eff;
+        color: white;
+      }
+
+      .ctaContainer a.primary-btn:hover {
+        background-color: #023acc;
+      }
+
+      .ctaContainer a.secondary-btn {
+        background-color: white;
+        color: #333;
+        border: 1px solid #bfbfbf;
+      }
+
+      .ctaContainer a.secondary-btn:hover {
+        opacity: 0.8;
+      }
+
+      footer {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        text-align: center;
+        padding: 20px;
+        font-size: 14px;
+        background-color: #f0f0f0;
+        color: #666;
+      }
+    </style>
   </head>
-  <body style="margin: 0;">
-    <div style="display: flex; flex-direction: row; padding: 27px">
-      <a href="/" style="position: absolute"
-        ><img
+  <body>
+    <div
+      style="
+        display: flex;
+        flex-direction: row;
+        padding: 27px;
+        background-color: #fff;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+      "
+    >
+      <a href="/" style="position: absolute">
+        <img
           src="https://raw.githubusercontent.com/DinoscapeProgramming/Remote-Control/main/docs/static/logo.svg"
           style="width: 300px; margin-top: -13px; margin-left: 60px"
-      /></a>
-
+        />
+      </a>
       <a
         href="/"
         style="
-          color: #585c67;
+          color: black;
           font-size: 16px;
           font-weight: 500;
           font-family: system-ui;
@@ -27,8 +112,9 @@
           margin-left: 391px;
           margin-right: 32.5px;
         "
-        >Home</a
       >
+        Home
+      </a>
       <a
         href="/team"
         style="
@@ -39,8 +125,10 @@
           text-decoration: none;
           margin-right: 32.5px;
         "
-        >About us</a
-      ><a
+      >
+        About us
+      </a>
+      <a
         href="https://github.com/DinoscapeProgramming/Remote-Control/releases"
         style="
           color: #585c67;
@@ -50,19 +138,23 @@
           text-decoration: none;
           margin-right: 32.5px;
         "
-        >Changelog</a
-      ><a
+      >
+        Changelog
+      </a>
+      <a
         href="/open-source"
         style="
-          color: black;
+          color: #585c67;
           font-size: 16px;
           font-weight: 500;
           font-family: system-ui;
           text-decoration: none;
           margin-right: 32.5px;
         "
-        >Open Source</a
-      ><a
+      >
+        Open Source
+      </a>
+      <a
         href="/docs"
         style="
           color: #585c67;
@@ -72,8 +164,9 @@
           text-decoration: none;
           margin-right: 32.5px;
         "
-        >Docs</a
       >
+        Docs
+      </a>
       <a
         href="https://github.com/DinoscapeProgramming/Remote-Control/releases/tag/v1.0.0"
         style="
@@ -92,85 +185,27 @@
           padding-left: 18.5px;
           padding-right: 19.5px;
         "
-        >Download</a
       >
+        Download
+      </a>
     </div>
-    <div
-      style="
-        width: 100%;
-        height: 1px;
-        background-color: #bfbfbfd9;
-        opacity: 0.25;
-      "
-    ></div>
-    <h1
-      style="
-        font-size: 35px;
-        font-weight: 700;
-        font-family: system-ui;
-        margin-top: 45px;
-        margin-left: 65px;
-        margin-right: 65px;
-        text-align: center;
-      "
-    >
-      We are built by the open-source community
-    </h1>
-    <h2
-      style="
-        width: 70vw;
-        font-size: 17.25px;
-        font-weight: 400;
-        font-family: system-ui;
-        margin-top: -12.5px;
-        margin-bottom: 47.5px;
-        margin-left: calc(65px + 8.75vw);
-        opacity: 0.75;
-        text-align: center;
-      "
-    >
-      Come and be part of our vibrant community of developers and supporters.
-      Collaborate with us to elevate RustDesk and make a positive impact on
-      users globally.
+    <h1>We are built by the open-source community</h1>
+    <h2>
+      Join our vibrant community of developers and supporters. Collaborate with
+      us to elevate Remote Control and make a positive impact globally.
     </h2>
-    <div style="position: absolute; left: 50%; transform: translateX(-50%)">
+    <div class="ctaContainer">
       <a
         href="https://github.com/DinoscapeProgramming/Remote-Control"
-        style="
-          color: #ffffff;
-          background-color: #024eff;
-          text-decoration: none;
-          font-size: 16px;
-          font-weight: 500;
-          font-family: system-ui;
-          margin-top: -11px;
-          border-radius: 9px;
-          padding-top: 11px;
-          padding-bottom: 13px;
-          padding-left: 18.5px;
-          padding-right: 19.5px;
-        "
+        class="primary-btn"
         >Star on GitHub</a
-      ><a
+      >
+      <a
         href="https://github.com/DinoscapeProgramming/Remote-Control/issues"
-        style="
-          color: black;
-          text-decoration: none;
-          font-size: 16px;
-          font-weight: 500;
-          font-family: system-ui;
-          margin-top: -11px;
-          margin-left: 11.25px;
-          border-radius: 9px;
-          padding-top: 11px;
-          padding-bottom: 13px;
-          padding-left: 18.5px;
-          padding-right: 19.5px;
-          border: 1px solid #bfbfbfb8;
-          opacity: 0.9;
-        "
+        class="secondary-btn"
         >Find Open Issues</a
       >
     </div>
+    <footer>© 2024 Remote Control - All Rights Reserved</footer>
   </body>
 </html>
