Updated team page; Updated open source page; Changed npm package version

--- a/server/pages/openSource/index.html
+++ b/server/pages/openSource/index.html
@@ -78,7 +78,8 @@
         bottom: 0;
         width: 100%;
         text-align: center;
-        padding: 20px;
+        padding-top: 20px;
+        padding-bottom: 20px;
         font-size: 14px;
         background-color: #f0f0f0;
         color: #666;
