--- a/server/pages/team/index.html
+++ b/server/pages/team/index.html
@@ -82,11 +82,14 @@
       }
 
       footer {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
         text-align: center;
-        margin-top: 152.5px;
-        padding: 20px;
-        background-color: #f0f0f0;
+        padding-top: 20px;
+        padding-bottom: 20px;
         font-size: 14px;
+        background-color: #f0f0f0;
         color: #666;
       }
     </style>
@@ -110,7 +113,7 @@
       <a
         href="/"
         style="
-          color: black;
+          color: #585c67;
           font-size: 16px;
           font-weight: 500;
           font-family: system-ui;
@@ -124,7 +127,7 @@
       <a
         href="/team"
         style="
-          color: #585c67;
+          color: black;
           font-size: 16px;
           font-weight: 500;
           font-family: system-ui;
